# dialogue

./: .travis.yml  Cargo.toml  LICENSE  README.md  install.sh  run.sh  start.sh  test.sh
specs/: response_codes.md
src/: command.rs  constants.rs  data.rs  error.rs  group.rs  log.rs  main.rs  range.rs  response.rs  server.rs  session.rs  text.rs  types.rs  util.rs  verbose.rs
src/database/: get_group.sql  install_1.sql  mod.rs  test_data.sql
src/database/queries/: get_group.sql  list_article_numbers.sql
src/database/scripts/: install_1.sql  test_data.sql
src/tests/: command_tests.rs  database.rs  group_id_tests.rs  helper_functions.rs  mod.rs  range_tests.rs  server.rs  server_tests.rs  test_client.rs  util.rs  util_tests.rs
